FIX: Align jQuery UI drodowns to the left. [t16332]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@11025 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1394,3 +1394,8 @@ a.Enabled, a:visited.Enabled {
     float: right;
     height: 30px;
 }
+
+/* jQuery UI */
+.ui-menu-item {
+    text-align: left;
+}
